--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
             </div>
         </div>
         <div class="join-now">
-            <button style="background-color: #1e90ff; color: white; padding: 10px 20px; font-size: 16px; border: none; border-radius: 8px; cursor: pointer; transition: background-color 0.3s ease, transform 0.3s ease;" onmouseover="this.style.backgroundColor='#1c86ee'; this.style.transform='scale(1.1)';" onmouseout="this.style.backgroundColor='#1e90ff'; this.style.transform='scale(1)';" onclick="window.location.href='https://thirulingeshwar.github.io/login-page/';">Login</button>
+            <button style="background-color: #1e90ff; color: white; padding: 10px 20px; font-size: 16px; border: none; border-radius: 8px; cursor: pointer; transition: background-color 0.3s ease, transform 0.3s ease;" onmouseover="this.style.backgroundColor='#1c86ee'; this.style.transform='scale(1.1)';" onmouseout="this.style.backgroundColor='#1e90ff'; this.style.transform='scale(1)';" onclick="window.location.href='https://login-fawn-seven.vercel.app/';">Login</button>
         </div>
     </div>
     <style>
