--- a/index.html
+++ b/index.html
@@ -436,6 +436,9 @@
 <body>
     <div class="top-bar">
         <div class="contact-info">
+            <div class="logo">
+            <img src="https://i.postimg.cc/wjnYKPht/ps-file.png" alt="Skola Tech Academy Logo" style="height: 100px;">
+        </div>
             <div class="contact-item">
                 <img width="25" height="25" src="https://img.icons8.com/3d-fluency/94/telephone-handset.png" alt="telephone-handset"/>
                 <span>Ph: 9952620470</span>
