--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
                 <a href="https://www.facebook.com/people/SkolaTech-Academy-it-Services/61558685596890/" target="_blank">
                     <img width="25" height="25" src="https://img.icons8.com/ios/50/facebook--v1.png" alt="Facebook" />
                 </a>
-                <a href="https://wa.me/919952620470" target="_blank">
+                <a href="#" target="_blank">
                     <img width="25" height="25" src="https://img.icons8.com/ios/50/whatsapp--v1.png" alt="WhatsApp" />
                 </a>
                 
